Set correct portrait/landscape orientation on PCL 5c/e output

Fixes bug #693715.